--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,8 +5,6 @@
     "stylelint-config-rational-order/plugin"
   ],
   "rules": {
-    "indentation": [2],
-    "color-hex-case": "lower",
     "no-empty-source": null,
     "selector-pseudo-element-no-unknown": null,
     "selector-class-pattern": null,
@@ -16,7 +14,6 @@
     "block-no-empty": null,
     "selector-pseudo-class-no-unknown": null,
     "scss/dollar-variable-pattern": null,
-    "scss/double-slash-comment-whitespace-inside": null,
-    "scss/comment-no-empty": null
+    "scss/double-slash-comment-whitespace-inside": null
   }
 }
