--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "lint": "ng lint --fix"
   },
   "lint-staged": {
-    "*.ts": [ "ng-lint-staged lint --fix --", "git add ."],
-    "*.{css,scss}": ["stylelint --fix", "git add ."]
+    "*.ts": [
+      "ng-lint-staged lint --fix --",
+      "git add ."
+    ],
+    "*.{css,scss}": [
+      "stylelint --fix",
+      "git add ."
+    ]
   },
   "private": true,
   "engines": {
@@ -27,7 +33,6 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
-    "eslint-plugin-import": "^2.29.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -48,7 +53,9 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.0",
     "jasmine-core": "~5.1.0",
@@ -60,10 +67,8 @@
     "lint-staged": "^15.2.0",
     "ng-lint-staged": "^12.0.4",
     "prettier": "^3.1.1",
-    "prettier-plugin-sort-imports": "^1.7.2",
     "stylelint": "^16.0.2",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^35.0.0",
     "stylelint-config-standard-scss": "^12.0.0",
     "stylelint-order": "^6.0.4",
     "typescript": "~5.2.2"
