--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --open",
     "build": "ng build",
+    "docker:build": "docker-compose -f docker-compose.build.yml up --build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "prepare": "husky install",
